[package]
name = "fimer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
reqwest = "0.12.12"
tokio = { version = "1.43.0", features = ["macros", "rt"] }
anyhow = "1.0.95"
rumqttc = "0.24.0"

[profile.release]
strip = true
codegen-units = 1
panic = "abort"
